--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
     <p class="tagline">Graphic Designer | Dark Aesthetic Lover</p>
 
     <p class="intro">
-      ผมนาย ศตบรรณ โนยราษฎร์ ชื่อเล่น บาส นี้คือ portfolio บนเว็บของผมครั้งแรก ขอให้ชมผลงานของผมให้สนุกครับ
+      ผมนาย ศตบรรณ โนยราษฎร์ ชื่อเล่น บาส นี้คือ portfolio html ของผมครั้งแรก ขอให้ชมผลงานของผมให้สนุกครับ
     </p>
 
     <p class="intro en">
-      My name is Satabun Noyrach, nickname Bas, This is my first portfolio on the website. Please enjoy my works.
+      My name is Satabun Noyrach, nickname Bas, This is my first portfolio on the Html. Please enjoy my works.
     </p>
   </section>
   
